fix root overflow-x handling

--- a/ui/src/app.scss
+++ b/ui/src/app.scss
@@ -19,9 +19,12 @@
     @apply font-sans flex justify-center bg-gray-200 dark:bg-gray-700 outline-none;
   }
 
-  :root.dark {
-    color-scheme: dark;
+  :root {
     overflow-x: hidden;
+
+    &.dark {
+      color-scheme: dark;
+    }
   }
 
   .story-content {
